# csdk-appliance

./: .gitattributes  .gitlab-ci.yml  README.md  index.html  index.mjs  libv86.mjs  package-lock.json  package.json  setup.sh  v86.wasm  vite.config.js  vite.singlefile.config.js
.github/workflows/: build.yaml
ext/: Config.in  busybox.config  external.desc  external.mk  kernel.config
ext/configs/: v86_defconfig
ext/package/buildserver/: Config.in  buildserver.mk
ext/package/ce-csdk/: 0001-convbin-flags-override.patch  0002-convimg-flags-override.patch  0003-cedev-config-flags-override.patch  0004-nocheck.patch  Config.in  ce-csdk.hash  ce-csdk.mk
ext/package/csdk-server/: Config.in  csdk-server.mk
ext/package/ez80-llvm/: 0001-smallvec-stdint-fix.patch  Config.in  ez80-llvm.hash  ez80-llvm.mk
ext/package/fasmg/: Config.in  fasmg.hash  fasmg.mk
ext/rootfs-overlay/etc/: fstab
sdkserver/: S99buildserver.sh  pyproject.toml
sdkserver/src/buildserver/: __init__.py
sdkserver/test/: test_buildserver.py
src/: index.mjs
src/machine/: .gitignore
