[project]
name = "buildserver"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Peter Marheine", email = "peter@taricorp.net" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
buildserver = "buildserver:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
