[project]
name = "buildserver"
version = "0.1.0"
authors = [
    { name = "Peter Marheine", email = "peter@taricorp.net" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
buildserver = "buildserver:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
